<resources>
    <string name="app_name">3DPark</string>
    <string name="title_activity_main" translatable="false">3DParks</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">3DPark</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="API_URL" translatable="false">https://us-central1-dpark-4c6f8.cloudfunctions.net</string>
    <string name="API_POSTS_GET_ALL_POSTS" translatable="false">/getAllParkingSpots</string>
    <string name="API_POSTS_GET_NEARBY_POSTS" translatable="false">/getNearbySpots</string>
    <string name="API_POSTS_POST_RESERVE_SPOT" translatable="false">/reserveSpot</string>
    <string name="API_SPOTS_POST_ADD_SPOT" translatable="false">/addSpot</string>
    <string name="API_USERS_GET_USER_DATA" translatable="false">/getUserData</string>
    <string name="API_USERS_GET_USER_RESERVATIONS" translatable="false">/getUserReservations</string>
    <string name="API_USERS_GET_USER_SPOTS" translatable="false">/getUserSpots</string>

    <string name="menu_spots">Spots</string>
    <string name="menu_history">History</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_my_spots">My Spots</string>
    <string name="settings_sign_out">Sign Out</string>
    <string name="title_activity_profile" translatable="false">ProfileActivity</string>
    <string name="nearby">Near you</string>
    <string name="no_nearby">No nearby spots found, try increasing the range</string>
    <string name="rates">Rates</string>
    <string name="current">Current</string>
    <string name="day">Day</string>
    <string name="afternoon">Afternoon</string>
    <string name="night">Night</string>
    <string name="vehicles">Vehicles</string>
    <string name="joined">Joined</string>
    <string name="reserveFor">Reserve For</string>
    <string name="hours">Hours</string>
    <string name="reserve">Reserve</string>
    <string name="estimatedCost">Estimated Cost</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="history">History</string>
    <string name="title_activity_my_spots">MySpotsActivity</string>
    <string name="my_spots">My Spots</string>
    <string name="title_activity_add_spot">AddSpotActivity</string>
    <string name="address">Address</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="coordinates">Coordinates</string>
    <string name="add_spot">Add Spot</string>
    <string name="photo">Photo</string>
    <string name="city">City</string>
    <string name="neighborhood">Neighborhood</string>

</resources>
