<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:id="@+id/spots_detail_image_small"
                    android:onClick="enlargePhoto"
                    android:scaleType="centerCrop"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:layout_gravity="center"
                    android:background="#99000000"
                    android:orientation="vertical"
                    android:visibility="visible"
                    android:onClick="enlargePhoto"
                    android:animateLayoutChanges="true">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/assistant_light"
                        android:text="La condesa 1722"
                        android:textColor="@color/White"
                        android:textSize="26sp"
                        android:layout_margin="16dp"
                        android:id="@+id/spots_detail_text_address_street"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="SS"
                            android:fontFamily="@font/assistant_light"
                            android:textSize="26sp"
                            android:textColor="@color/White"
                            android:id="@+id/spots_detail_text_score"
                            android:gravity="center"
                            android:layout_marginEnd="8dp"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tint="@color/White"
                            app:srcCompat="@drawable/ic_star_border_black_30dp" />



                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/assistant_light"
                        android:text="La condesa 1722, Jardines del country, Guadalajara"
                        android:textColor="@color/White"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:textStyle="italic"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:id="@+id/spots_detail_text_address_full"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:fontFamily="@font/assistant_light"
                        android:id="@+id/spots_detail_text_distance"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:textColor="@color/White"
                        android:text="8 mins / 3300 M" />

                </LinearLayout>

            </android.support.design.widget.CoordinatorLayout>

            <fragment
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                tools:context=".SpotDetailActivity" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/assistant_extralight"
                        android:text="@string/rates"
                        android:textSize="24sp"
                        android:layout_margin="16dp" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/LightGrey"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="16dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:fontFamily="@font/assistant_light"
                            android:textColor="@color/Black"
                            android:text="@string/current" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="20sp"
                            android:fontFamily="@font/assistant_extralight"
                            android:textColor="@color/Black"
                            android:id="@+id/spots_detail_text_fare_current"
                            android:text="00.0041 ETH / Hr" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:fontFamily="@font/assistant_light"
                            android:text="@string/day" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="18sp"
                            android:fontFamily="@font/assistant_extralight"
                            android:id="@+id/spots_detail_text_fare_day"
                            android:text="00.0041 ETH / Hr" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:fontFamily="@font/assistant_light"
                            android:text="@string/afternoon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="18sp"
                            android:fontFamily="@font/assistant_extralight"
                            android:id="@+id/spots_detail_text_fare_afternoon"
                            android:text="00.0041 ETH / Hr" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:fontFamily="@font/assistant_light"
                            android:text="@string/night" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="18sp"
                            android:fontFamily="@font/assistant_extralight"
                            android:id="@+id/spots_detail_text_fare_night"
                            android:text="00.0041 ETH / Hr" />

                    </LinearLayout>



                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="#99000000"
        android:id="@+id/spots_detail_layout_image"
        android:orientation="vertical"
        android:visibility="gone"
        android:onClick="enlargePhoto"
        android:animateLayoutChanges="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:id="@+id/spots_detail_image_large" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/reserve_scroll_reservation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/reserveFor"
                            android:textSize="18sp"
                            android:textColor="@color/Black"
                            android:layout_marginTop="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"/>

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/estimatedCost"
                            android:textSize="18sp"
                            android:gravity="center"
                            android:id="@+id/reserve_text_cost"
                            android:layout_marginBottom="16dp"
                            android:textColor="@color/Black" />

                        <nl.dionsegijn.steppertouch.StepperTouch

                            android:layout_width="100dp"
                            android:layout_height="40dp"
                            android:layout_margin="16dp"
                            android:id="@+id/reserve_stepper_hours"
                            android:layout_gravity="center"/>
                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hours"
                            android:textSize="18sp"
                            android:gravity="center"
                            android:layout_marginBottom="16dp"
                            android:textColor="@color/Black" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/reserve"
                    android:background="@color/Black"
                    android:onClick="reserveSpot"
                    android:id="@+id/reserve_button_reserve"
                    android:textColor="@color/White"/>

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:layout_margin="16dp"
                    android:id="@+id/reserve_progress_reserving"
                    android:indeterminateTint="@color/White"/>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:tint="@color/White"
        android:onClick="onReserveSpot"
        android:id="@+id/reserve_fab_reserve"
        app:srcCompat="@drawable/ic_directions_black_24dp"/>

</android.support.design.widget.CoordinatorLayout>